# actor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
event-system/: Makefile  event-system.cc
include/: actor.h  event-handler.h  event-system.h
test/: actor_test.cc  actor_test.h  event-system-test.cc
